# rust-learning

./: .gitignore  gen-test-files.sh  test.txt
client/: Cargo.toml
client/src/: main.rs
cryptor-rs/: Cargo.toml
cryptor-rs/src/: crypto.rs  cryptor_engine.rs  errors.rs  files.rs  lib.rs  stream_encryption.rs
file_encryptor/: Cargo.toml  test.txt  test.txt.enc
file_encryptor/src/: main.rs
fn-tracer/: Cargo.toml
local_utils/: Cargo.toml
local_utils/src/: crypto.rs  cryptor.rs  cryptor_engine.rs  errors.rs  files.rs  lib.rs  stream_encryption.rs  tcp.rs  test_common.rs
projects/client/: Cargo.toml
projects/client/src/: main.rs
projects/file_encryptor/: Cargo.toml
projects/file_encryptor/src/: main.rs
projects/proc-macro/: Cargo.toml
projects/server/: Cargo.toml
projects/server/src/: main.rs
projects/syscall_fun_times/: Cargo.toml
projects/syscall_fun_times/src/: main.rs
rustware/: Cargo.toml
rustware-proc-macro/: Cargo.toml
rustware-proc-macro/src/: lib.rs
rustware/src/: crypto.rs  cryptor_engine.rs  errors.rs  files.rs  lib.rs  stream_encryption.rs  syscall_stub.rs  tcp.rs
server/: Cargo.toml  README.md
server/src/: main.rs
test.old/: damn.txt
test.old/oh/: no.txt
