[package]
name = "file_encryptor"
version = "0.1.0"
edition = "2024"

[dependencies]
local_utils = {path = "../local_utils", features = ["test_utils"]}
clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive", "std", "serde_derive"] }
bincode = { version = "2.0.1", features = ["serde", "std"] }
serde-big-array = "0.5.1"