[package]
name = "local_utils"
version = "0.1.0"
edition = "2024"


[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
hkdf = { version = "0.12.4", features = ["std"]}
sha2 = "0.10.2"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive",  "serde_derive", "std"] }
serde_bytes = { version = "0.11.17" , features = ["std"]}
bincode = { version = "2.0.1", features = ["serde", "std"] }
thiserror = "2.0.12"

[features]
default = ["std"]
std = []
test_utils = []

[dev-dependencies]
local_utils = { path = ".", features = ["test_utils"] }