[package]
name = "rustware"
version = "0.1.0"
edition = "2024"


[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
hkdf = { version = "0.12.4", features = ["std"]}
sha2 = "0.10.2"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive",  "serde_derive", "std"] }
serde_bytes = { version = "0.11.17" , features = ["std"]}
bincode = { version = "2.0.1", features = ["serde", "std"] }
thiserror = "2.0.12"
tempfile = "3.20.0"
lazy_static = "1.5.0"
tar = "0.4.44"
derive_builder = "0.20.2"
rustware-proc-macro = {path = "../rustware-proc-macro"}

[features]
default = ["std"]
std = []
test_utils = []

[dev-dependencies]
rustware = { path = ".", features = ["test_utils"] }